@@ -26,11 +26,10 @@ BEGIN_DEVICE_LIBRARY(yarpmod)
   ADD_SUBDIRECTORY(ffmpeg)
   ADD_SUBDIRECTORY(opencv)
   ADD_SUBDIRECTORY(microphone)
+  ADD_SUBDIRECTORY(serial)
   # we can include remote directories as well - we specify a 
   # local directory for producing binaries so there is no interference
   # with other possible builds.
-  ADD_SUBDIRECTORY(${YARP_DIR}/src/libYARP_dev/src/serial 
-                   ${CMAKE_CURRENT_BINARY_DIR}/serial)
   ADD_SUBDIRECTORY(${YARP_DIR}/src/libYARP_dev/src/firewirecamera
                    ${CMAKE_CURRENT_BINARY_DIR}/firewirecamera)
   ADD_SUBDIRECTORY(${YARP_DIR}/src/libYARP_dev/src/portaudio
