@@ -1,7 +1,7 @@
 IF (COMPILE_DEVICE_LIBRARY)
   PREPARE_DEVICE(serial TYPE ServerSerial INCLUDE yarp/dev/ServerSerial.h
 			  WRAPPER serial)
-  PREPARE_DEVICE(serialport TYPE SerialDeviceDriver INCLUDE common/yarp/SerialDeviceDriver.h WRAPPER serial)
+  PREPARE_DEVICE(serialport TYPE SerialDeviceDriver INCLUDE SerialDeviceDriver.h WRAPPER serial)
 ENDIF (COMPILE_DEVICE_LIBRARY)
 
 IF (SKIP_serial AND SKIP_serialport)
@@ -15,14 +15,14 @@ FIND_PACKAGE(YARP REQUIRED)
 FIND_PACKAGE(Ace)
 
 IF (Ace_FOUND)
-  INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/common ${ACE_INCLUDE_DIR})
+  INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${ACE_INCLUDE_DIR})
   LINK_LIBRARIES(${ACE_LIBRARY})
 
-  ADD_LIBRARY(serial default/yarp/SerialDeviceDriver.cpp common/yarp/SerialDeviceDriver.h)
+  ADD_LIBRARY(serial SerialDeviceDriver.cpp SerialDeviceDriver.h)
 
 ELSE (Ace_FOUND)
 
-  MESSAGE(STATUS "ACE not found")
+  MESSAGE(SEND_ERROR "ACE not found; needed by serial driver")
 
 ENDIF (Ace_FOUND)
 
