@@ -1,3 +1,8 @@
+2008-03-19  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/modules/CMakeLists.txt:  move serial device from
+	src/libYARP_dev/src/serial
+
 2008-03-18  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* src/modules/CMakeLists.txt: move ffmpeg wrapper from
